<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Dot Music Player</string>

    <string name="playlist_last_added">Last added</string>
    <string name="playlist_recently_played">Recently played</string>
    <string name="playlist_top_tracks">My top tracks</string>


    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>

    <string name="go_to_album">Go to Album</string>
    <string name="go_to_artist">Go to Artist</string>
    <string name="play">Play</string>
    <string name="play_next">Play Next</string>
    <string name="use_as_ringtone">Use as Ringtone</string>
    <string name="dequeue">Dequeue</string>
    <string name="rename">Rename</string>
    <string name="color_primary">Color Primary</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="color_accent">Color Accent</string>
    <string name="pause">Pause</string>
    <string name="send_feedback">Send Feedback…</string>
    <string name="external_storage_permission_is_needed">External storage permission is needed to read Music files from the storage</string>
    <string name="grant">Grant</string>
    <string name="enable_permission">Enable Permission</string>
    <string name="manual_permission_grant_instruction"><![CDATA[Go to settings -> Permissions to grant access to the storage]]></string>
    <string name="permission_denied">Permission denied</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="this_can_not_be_undone">This can not be undone</string>
    <string name="delete_songs_format">Delete %d songs?</string>
    <string name="delete_question_mark_format">Delete %s?</string>
    <string name="save">Save</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="playlist_exists_warning">Playlist Exists, Please remove the existing playlist first</string>
    <string name="unable_to_create_playlist">Unable to create playlist</string>
    <string name="playlist_successfully_created_format">Playlist %s Successfully created</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="song_details">Song Details</string>
    <string name="okay">Okay</string>
    <string name="number_in_parentheses_format">(%d)</string>
    <string name="no_albums">No Albums</string>
    <string name="artist_bio_not_available">Artist bio not available</string>
    <string name="no_artists">No Artists</string>
    <string name="play_queue">Play Queue</string>
    <string name="no_result">No Result</string>
    <string name="enable_album_art_theme">Enable Album art theme?</string>
    <string name="enable_album_art_theme_disclaimer_message">This theme is experimental but usable!. You need to have correct artworks for greater visual experience</string>
    <string name="disable_album_art_theme">Disable Album art theme</string>
    <string name="disable_album_art_theme_warning_message">You are currently using the album art theme. You need to disable it to continue.</string>
    <string name="no_songs">No Songs</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="notification_channel_name">Dot Music Player Playing Notification</string>
    <string name="notification_channel_description">The playing notification provides shortcut for quick playback actions like pause, play, next etc.</string>
    <string name="reset_ongoing_timer">Please reset an ongoing timer to start a new one</string>
    <string name="set_a_valid_duration">Please set a valid duration</string>
    <string name="sleep_timer_started">Sleep timer started</string>
    <string name="app_needs_settings_permission">The app needs settings permission to set the ringtone. After setting the permission, try to set the the ringtone again</string>
    <string name="song_set_as_your_ringtone_format">%s is set as your ringtone</string>
    <string name="grant_settings_permission">Grant Settings Permission</string>
    <string name="no_equalizer_found">No Equalizer found on your phone</string>
    <string name="playlist_successfully_removed">Playlist successfully removed</string>
    <string name="share_music">Share Music</string>
    <string name="music_slam_music_player">Dot Player</string>
    <string name="send__feedback">Send Feedback</string>
    <string name="licences">Licences</string>
    <string name="rate_on_playstore">Rate on PlayStore</string>
    <string name="open_music_slam">Open Dot Player</string>
    <string name="no_data">No data</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="title_colon">Title:</string>
    <string name="file_path_colon">File path:</string>
    <string name="artist_colon">Artist:</string>
    <string name="album_colon">Album:</string>
    <string name="length_colon">Length:</string>
    <string name="file_size_colon">File size:</string>
    <string name="mime_type_colon">MIME Type:</string>
    <string name="track_no_colon">Track No:</string>
    <string name="music_slam">Music Slam</string>
    <string name="new_playlist">New Playlist</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="about">About</string>
    <string name="playing_queue">Playing Queue</string>
    <string name="song_info">Song Info</string>
    <string name="save_queue">Save Queue</string>
    <string name="clear_queue">Clear Queue</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="shuffle">Shuffle</string>
    <string name="play_all">Play All</string>
    <string name="enqueue">Enqueue</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="details">Details</string>

    <string name="theme">Themes</string>
    <string name="use_blur_artwork_disclaimer">This will use Blurred Artworks for App background</string>
    <string name="enable_albumart_theme">Enable AlbumArt Theme (Beta)</string>
    <string name="choose_theme_pref_summary">Choose from Light, Dark, Black or Blue.\nDisable Albumart theme to activate.</string>
    <string name="change_color_primary">Change Primary Color</string>
    <string name="change_color_accent">Change Accent Color</string>
    <string name="adjust_audio_settings">Adjust audio settings</string>
    <string name="equalizer">Equalizer</string>
    <string name="select_start_page">Select start page</string>
    <string name="start_page">Start page</string>
    <string name="playback">Playback</string>
    <string name="display">Display</string>
    <string name="album_on_lock_screen_pref_summary">Enables/Disables album art on lock screen</string>
    <string name="album_on_lock_screen_pref_title">Show album art on lock screen</string>
    <string name="artworks">Artworks</string>
    <string name="auto_download_artwork_pref_summary">Allow the app to automatically fetch artworks from the internet</string>
    <string name="auto_download_artwork_pref_title">Automatically download Artworks</string>
    <string name="artwork_on_wifi_only_pref_summary">Artworks will only be downloaded via Wi-Fi</string>
    <string name="app_info_pref_summary">Licences, Feedback, build info etc</string>
    <string name="app_info_pref_title">App info</string>

    <string name="delete_cached_contents_title">Delete cached contents</string>
    <string name="delete_cached_content_summary">This will delete all cached images. Use this if you are seeing wrong/outdated Artworks associated with Songs, Albums or Artists. You can also use this to force update for the contents gotten from the internet</string>

    <string name="my_music">My Music</string>
    <string name="clear_cache_question">Clear Cache?</string>
    <string name="delete_cache_new_content_will_be_created">Delete cache, new contents will be created</string>

    <string-array name="main_pager_tab_titles">
        <item>SONGS</item>
        <item>ALBUMS</item>
        <item>ARTISTS</item>
        <item>GENRES</item>
        <item>PLAYLISTS</item>
    </string-array>

    <string-array name="artist_details_tab_titles">
        <item>SONGS</item>
        <item>ALBUMS</item>
        <item>BIO</item>
    </string-array>

    <string-array name="themes_titles">
        <item>Light Theme</item>
        <item>Dark Theme</item>
        <item>Black Theme</item>
        <item>Blue Theme</item>
    </string-array>

    <string-array name="themes_values">
        <item>light</item>
        <item>dark</item>
        <item>black</item>
        <item>blue</item>
    </string-array>

    <string-array name="start_page_titles">
        <item>Last opened</item>
        <item>Songs</item>
        <item>Albums</item>
        <item>Artists</item>
        <item>Genres</item>
        <item>Playlists</item>
    </string-array>

    <string-array name="start_page_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
