<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new_playlist"
        android:enabled="false"
        android:title="@string/new_playlist"
        android:visible="false" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_shuffle_all"
        android:enabled="false"
        android:title="@string/shuffle_all"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sleep_timer"
        android:title="@string/sleep_timer"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>